add class to ravitch video iframe

--- a/ravitch-credit.html
+++ b/ravitch-credit.html
@@ -11,10 +11,10 @@
 		border-top: double 6px #0d5c78;
 		text-align: left;
 	}
-	#wrapper p, ul.ravitch, iframe {
+	#wrapper p, ul.ravitch, iframe.ravitch-vid {
 		float:left;
 	}
-	iframe {
+	iframe.ravitch-vid {
 		padding-left: 20px;
 	}
 	ul.ravitch {
@@ -42,7 +42,7 @@
 				<li><strong>Jessica McInchak</strong>, digital architect</li>
 				<li><strong>Matthew Morley</strong>, videographer and photographer</li>
 			</ul>
-			<iframe width="280" height="185" src="https://www.youtube.com/embed/jPXdEWxadVs" frameborder="0" allowfullscreen></iframe>
+			<iframe class="ravitch-vid" width="280" height="185" src="https://www.youtube.com/embed/jPXdEWxadVs" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 </body>
